# IcePhasefieldLBM

Initial_shrink/: CMakeLists.txt  Domain.h  tclbm07.cu
